--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ alembic==1.5.8
 click==7.1.2
 ecdsa==0.14.1
 Flask==1.1.2
+Flask-Cors==3.0.10
 Flask-Migrate==2.7.0
 Flask-SQLAlchemy==2.5.1
 greenlet==1.0.0
